📱 quizz: fix height quizz on safari mobile

--- a/_assets/less/_main.less
+++ b/_assets/less/_main.less
@@ -14,7 +14,7 @@ html, body {
   }
 }
 html {
-  min-height: 100vh;
+  min-height: calc(var(--vhRes) * 100);
 }
 body {
   background-image: url('/imgs/background.png');
