--- a/components/Quizz/style.less
+++ b/components/Quizz/style.less
@@ -1,5 +1,5 @@
 .quizz {
-  min-height: calc(100vh - 32px);
+  min-height: calc(var(--vhRes) * 100 - 32px);
 
   display: flex;
   flex-direction: column;
